--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -14,3 +14,12 @@
   gather_facts: true
   roles:
     - role: instance_facts
+    - role: prerequisites
+    - role: mysql_setup
+    - role: selinux_config
+    - role: snapcenter_download
+    - role: snapcenter_install
+    - role: snapcenter_post_install
+    - role: snapcenter_add_users
+    - role: root_user_secure
+    - role: companieshouse.security.security_scans
