--- a/ansible/roles/snapcenter_install/tasks/main.yml
+++ b/ansible/roles/snapcenter_install/tasks/main.yml
@@ -7,11 +7,4 @@
     creates: "{{ snapcenter_install_dir }}"
   become: true
   register: snapcenter_install_result
-
-- name: Wait for SnapCenter services to start
-  ansible.builtin.wait_for:
-    port: "{{ snapcenter_webapp_port }}"
-    host: localhost
-    delay: 10
-    timeout: 300
-  when: snapcenter_install_result.changed
+  notify: Wait for snapcenter services
