--- a/ansible/group_vars/all/microsoft_repo.yml
+++ b/ansible/group_vars/all/microsoft_repo.yml
@@ -1,2 +1,2 @@
 ---
-snapcenter_microsoft_repo_url: https://packages.microsoft.com/config/rhel/9/packages-microsoft-prod.rpm
+microsoft_repo_url: https://packages.microsoft.com/config/rhel/9/packages-microsoft-prod.rpm
