--- a/ansible/group_vars/all/mysql.yml
+++ b/ansible/group_vars/all/mysql.yml
@@ -1,3 +1,3 @@
 ---
-snapcenter_mysql_runtime_dir: /var/opt/mysqld
-snapcenter_mysql_data_dir: "{{ snapcenter_install_dir }}/SnapManagerWeb/Repository/MySQL"
+mysql_runtime_dir: /var/opt/mysqld
+mysql_data_dir: "{{ snapcenter_install_dir }}/SnapManagerWeb/Repository/MySQL"
