--- a/ansible/roles/snapcenter_add_users/tasks/main.yml
+++ b/ansible/roles/snapcenter_add_users/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Retrieve temporary root password from Hashicorp Vault
   ansible.builtin.set_fact:
-    root_password_temp: "{{ lookup('community.hashi_vault.hashi_vault', vault_base_path + '/root_password_temp') }}"
+    snapcenter_add_users_root_password_temp: "{{ lookup('community.hashi_vault.hashi_vault', vault_base_path + '/root_password_temp') }}"
 
 - name: Get API authentication token as root
   ansible.builtin.uri:
@@ -14,39 +14,40 @@
       UserOperationContext:
         User:
           Name: root
-          Passphrase: "{{ root_password_temp }}"
-    validate_certs: no
-    return_content: yes
-  register: auth_response
+          Passphrase: "{{ snapcenter_add_users_root_password_temp }}"
+    validate_certs: false
+    return_content: true
+  register: snapcenter_add_users_auth_response
 
 - name: Extract authentication token
   ansible.builtin.set_fact:
-    snapcenter_token: "{{ auth_response.json.User.Token }}"
+    snapcenter_add_users_auth_token: "{{ snapcenter_add_users_auth_response.json.User.Token }}"
 
 - name: Add admin user to SnapCenter with Admin role
   ansible.builtin.uri:
     url: "https://localhost:{{ snapcenter_webapp_port }}/api/{{ snapcenter_api_version }}/User?UserNames=admin&RoleNames=SnapCenterAdmin"
     method: POST
     headers:
-      Token: "{{ snapcenter_token }}"
+      Token: "{{ snapcenter_add_users_auth_token }}"
       Content-Type: application/json
-    validate_certs: no
+    validate_certs: false
     status_code: [200, 201]
-  register: add_admin_result
+  register: snapcenter_add_users_admin_result
 
 - name: Retrieve SnapCenter users from Hashicorp Vault
   ansible.builtin.set_fact:
-    snapcenter_users: "{{ lookup('community.hashi_vault.hashi_vault', vault_base_path + '/snapcenter_users') | from_json }}"
+    snapcenter_add_users_all_users: "{{ lookup('community.hashi_vault.hashi_vault', vault_base_path + '/snapcenter_users') | from_json }}"
 
 - name: Add additional users to SnapCenter via API
   ansible.builtin.uri:
-    url: "https://localhost:{{ snapcenter_webapp_port }}/api/{{ snapcenter_api_version }}/User?UserNames={{ item.username }}&RoleNames={{ item.snapcenter_role }}"
+    url: >-
+      https://localhost:{{ snapcenter_webapp_port }}/api/{{ snapcenter_api_version }}/User?UserNames={{ item.username }}&RoleNames={{ item.snapcenter_role }}
     method: POST
     headers:
-      Token: "{{ snapcenter_token }}"
+      Token: "{{ snapcenter_add_users_auth_token }}"
       Content-Type: application/json
-    validate_certs: no
+    validate_certs: false
     status_code: [200, 201]
-  loop: "{{ snapcenter_users.users | default([]) }}"
-  when: snapcenter_users is defined
-  register: add_users_results
+  loop: "{{ snapcenter_add_users_all_users.users | default([]) }}"
+  when: snapcenter_add_users_all_users is defined
+  register: snapcenter_add_users_all_users_results
