--- a/ansible/roles/snapcenter_download/defaults/main.yml
+++ b/ansible/roles/snapcenter_download/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-snapcenter_files:
+snapcenter_download_files:
   - "{{ snapcenter_binary }}"
   - "{{ snapcenter_binary }}.sig"
   - "snapcenter_public_key.pub"
