--- a/ansible/roles/snapcenter_post_install/defaults/main.yml
+++ b/ansible/roles/snapcenter_post_install/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
-snapcenter_runtime_dir: /var/opt/snapcenter
-snapcenter_nginx_conf: /etc/nginx/conf.d/snapcenter.conf
-snapcenter_certs_dir: "{{ snapcenter_runtime_dir }}/certs"
-snapcenter_cert_file: "{{ snapcenter_certs_dir }}/SCnginx.crt"
-snapcenter_key_file: "{{ snapcenter_certs_dir }}/SCnginx.key"
+snapcenter_post_install_runtime_dir: /var/opt/snapcenter
+snapcenter_post_install_nginx_conf: /etc/nginx/conf.d/snapcenter.conf
+snapcenter_post_install_certs_dir: "{{ runtime_dir }}/certs"
+snapcenter_post_install_cert_file: "{{ certs_dir }}/SCnginx.crt"
+snapcenter_post_install_key_file: "{{ certs_dir }}/SCnginx.key"
