--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -14,6 +14,8 @@
   gather_facts: true
   roles:
     - role: instance_facts
+    - role: vault_facts
+    - role: hostname
     - role: prerequisites
     - role: mysql_setup
     - role: selinux_config
