--- a/ansible/roles/snapcenter_add_users/tasks/main.yml
+++ b/ansible/roles/snapcenter_add_users/tasks/main.yml
@@ -40,6 +40,6 @@
       Content-Type: application/json
     validate_certs: false
     status_code: [200, 201]
-  loop: "{{ vault_facts_snapcenter_users.users | default([]) }}"
+  loop: "{{ vault_facts_snapcenter_users | default([]) }}"
   when: vault_facts_snapcenter_users is defined
   register: snapcenter_add_users_all_users_results
