--- a/ansible/roles/snapcenter_download/tasks/main.yml
+++ b/ansible/roles/snapcenter_download/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
 - name: Set S3 bucket and path
   ansible.builtin.set_fact:
-    snapcenter_download_s3_bucket_name: "{{ vault_facts_s3_resources_bucket.split('/')[0] }}"
-    snapcenter_download_s3_bucket_path: "{{ vault_facts_s3_resources_bucket.split('/', 1)[1] }}"
+    snapcenter_download_s3_resources_bucket: "{{ vault_facts_s3_resources_bucket }}"
+    snapcenter_download_s3_resources_path: "{{ vault_facts_s3_resources_path }}"
 
 - name: Create temporary download directory
   ansible.builtin.file:
@@ -12,8 +12,8 @@
 
 - name: Download SnapCenter installation files from S3
   amazon.aws.s3_object:
-    bucket: "{{ snapcenter_download_s3_bucket_name }}"
-    object: "{{ snapcenter_download_s3_bucket_path }}/{{ snapcenter_version }}/{{ item }}"
+    bucket: "{{ snapcenter_download_s3_resources_bucket }}"
+    object: "{{ snapcenter_download_s3_resources_path }}/{{ snapcenter_version }}/{{ item }}"
     dest: "{{ snapcenter_tmp_dir }}/{{ item }}"
     mode: get
     region: "{{ aws_region }}"
