--- a/ansible/roles/vault_facts/tasks/main.yml
+++ b/ansible/roles/vault_facts/tasks/main.yml
@@ -1,11 +1,11 @@
 ---
 - name: Retrieve temporary root password from Hashicorp Vault
   ansible.builtin.set_fact:
-    vault_facts_root_password_temp: "{{ lookup('community.hashi_vault.hashi_vault', vault_base_path + '/accounts-admin-root/root_password_temp') }}"
+    vault_facts_root_password_temp: "{{ lookup('community.hashi_vault.hashi_vault', vault_base_path + '/accounts-admin-root:root_password_temp') }}"
 
 - name: Retrieve admin password from Hashicorp Vault
   ansible.builtin.set_fact:
-    vault_facts_admin_password: "{{ lookup('community.hashi_vault.hashi_vault', vault_base_path + '/accounts-admin-root/admin_password') }}"
+    vault_facts_admin_password: "{{ lookup('community.hashi_vault.hashi_vault', vault_base_path + '/accounts-admin-root:admin_password') }}"
 
 - name: Retrieve SnapCenter users from Hashicorp Vault
   ansible.builtin.set_fact:
@@ -13,8 +13,8 @@
 
 - name: Retrieve S3 resources bucket from Hashicorp Vault
   ansible.builtin.set_fact:
-    vault_facts_s3_resources_bucket: "{{ lookup('community.hashi_vault.hashi_vault', vault_base_path + '/s3/s3_resources_bucket') }}"
+    vault_facts_s3_resources_bucket: "{{ lookup('community.hashi_vault.hashi_vault', vault_base_path + '/s3:s3_resources_bucket') }}"
 
 - name: Retrieve S3 resources path from Hashicorp Vault
   ansible.builtin.set_fact:
-    vault_facts_s3_resources_path: "{{ lookup('community.hashi_vault.hashi_vault', vault_base_path + '/s3/s3_resources_path') }}"
+    vault_facts_s3_resources_path: "{{ lookup('community.hashi_vault.hashi_vault', vault_base_path + '/s3:s3_resources_path') }}"
