--- a/ansible/roles/vault_facts/tasks/main.yml
+++ b/ansible/roles/vault_facts/tasks/main.yml
@@ -9,7 +9,7 @@
 
 - name: Retrieve SnapCenter users from Hashicorp Vault
   ansible.builtin.set_fact:
-    vault_facts_snapcenter_users: "{{ lookup('community.hashi_vault.hashi_vault', vault_base_path + '/accounts-users:snapcenter_users') | from_json }}"
+    vault_facts_snapcenter_users: "{{ lookup('community.hashi_vault.hashi_vault', vault_base_path + '/accounts-users:snapcenter_users') }}"
 
 - name: Retrieve S3 resources bucket from Hashicorp Vault
   ansible.builtin.set_fact:
