--- a/ansible/roles/snapcenter_install/tasks/main.yml
+++ b/ansible/roles/snapcenter_install/tasks/main.yml
@@ -4,7 +4,7 @@
     {{ snapcenter_tmp_dir }}/{{ snapcenter_binary }} -i silent
     {{ snapcenter_install_args | join(' ') }}
   args:
-    creates: "{{ snapcenter_install_dir }}"
+    creates: /etc/nginx/conf.d/snapcenter.conf
   become: true
   register: snapcenter_install_result
   notify: Wait for snapcenter services
