--- a/ansible/roles/snapcenter_install/tasks/main.yml
+++ b/ansible/roles/snapcenter_install/tasks/main.yml
@@ -6,5 +6,7 @@
   args:
     creates: /etc/nginx/conf.d/snapcenter.conf
   become: true
+  become_user: root
+  become_flags: '-i'
   register: snapcenter_install_result
   notify: Wait for snapcenter services
