--- a/ansible/roles/prerequisites/tasks/main.yml
+++ b/ansible/roles/prerequisites/tasks/main.yml
@@ -30,3 +30,4 @@
     create_home: false
   loop: "{{ vault_facts_snapcenter_users | default([]) }}"
   when: vault_facts_snapcenter_users is defined
+  no_log: true
