--- a/ansible/roles/snapcenter_add_users/tasks/main.yml
+++ b/ansible/roles/snapcenter_add_users/tasks/main.yml
@@ -43,3 +43,4 @@
   loop: "{{ vault_facts_snapcenter_users | default([]) }}"
   when: vault_facts_snapcenter_users is defined
   register: snapcenter_add_users_all_users_results
+  no_log: true
