--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -8,5 +8,7 @@ collections:
     version: "8.1.0"
   - name: community.general
     version: "9.3.0"
+  - name: community.hashi_vault
+    version: ">=6.0.0,<7.0.0"
   - name: ansible.posix
     version: "1.6.2"
