--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -18,5 +18,5 @@
     - role: hostname
     - role: mount_snapcenter_data
     - role: snapcenter_add_users
-    - role: root_user_secure
-    - role: companieshouse.security.security_scans
+    # - role: root_user_secure
+    # - role: companieshouse.security.security_scans
