Test adding different user types

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -18,7 +18,7 @@
     - role: hostname
     - role: mount_snapcenter_data
     - role: reboot
-    # - role: snapcenter_add_users
+    - role: snapcenter_add_users
     - role: snapcenter_admin_verify
     # - role: root_user_secure
     # - role: companieshouse.security.security_scans
