--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,12 +1,3 @@
----
-- name: Provision Ansible controller with SSH key for remote
-  hosts: localhost
-  roles:
-    - role: companieshouse.general.ssh_key
-      vars:
-        ssh_key_name: ansible_remote
-        ssh_key_vault_path: "{{ vault_base_path }}/ansible"
-
 - name: NetApp SnapCenter post-deployment configuration
   hosts: aws_ec2
   remote_user: ec2-user
@@ -20,7 +11,8 @@
     - role: reboot
       when: (hostname_result.changed | default(false)) or
         (mount_snapcenter_data_mount_result.changed | default(false))
-    # - role: snapcenter_add_users
+    - role: snapcenter_add_users
     - role: snapcenter_admin_verify
-    # - role: root_user_secure
-    # - role: companieshouse.security.security_scans
+    - role: root_user_secure
+      when: snapcenter_add_users_authenticated_as == 'root'
+    - role: companieshouse.security.security_scans
