Restore ssh key

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,3 +1,12 @@
+---
+- name: Provision Ansible controller with SSH key for remote
+  hosts: localhost
+  roles:
+    - role: companieshouse.general.ssh_key
+      vars:
+        ssh_key_name: ansible_remote
+        ssh_key_vault_path: "{{ vault_base_path }}/ansible"
+
 - name: NetApp SnapCenter post-deployment configuration
   hosts: aws_ec2
   remote_user: ec2-user
